--- a/src/WebSocketManager/WebSocketManager.csproj
+++ b/src/WebSocketManager/WebSocketManager.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="NUlid" Version="1.3.1" />
   </ItemGroup>
 
   <ItemGroup>
