--- a/src/Bamboo.WebSocketManager.Common/Bamboo.WebSocketManager.Common.csproj
+++ b/src/Bamboo.WebSocketManager.Common/Bamboo.WebSocketManager.Common.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MessagePack" Version="2.1.115" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
